--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,7 +1,105 @@
+body {
+  padding-top: 30px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  padding: 35px 45px;
+  box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;
+  border-radius: 4px;
+}
+
+.list-container {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list-container li:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.feedback-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.console-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.console {
+  width: 800px;
+  max-width: 80%;
+  padding-bottom: 15px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.input-container span {
+  margin-bottom: 10px;
+  color: #5645ff;
+}
+
+.input-container input {
+  text-align: center;
+  color: #3a0586;
+}
+
+.input-container input:focus {
+  outline-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #5645ff;
+}
+
+a:hover,
+a:focus,
+a:active {
+  outline: none;
+  color: #3a0586;
+}
+
+a:focus {
+  font-weight: bold;
+}
+
 textarea {
   width: 100%;
-  min-height: 30rem;
-  font-family: "Lucida Console", Monaco, monospace;
+  height: 100%;
+  font-family: 'Lucida Console', Monaco, monospace;
   font-size: 0.8rem;
   line-height: 1.2;
+  background-color: #1d1d1d;
+  color: #31ff13;
 }
